Q3 update, ipynb explanation cell

--- a/2D Projection matrix and Optimization/HW3.ipynb
+++ b/2D Projection matrix and Optimization/HW3.ipynb
@@ -818,11 +818,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##  The remaining questions are implemented in MATLAB. "
+   ]
   }
  ],
  "metadata": {
