--- a/2D Projection matrix and Optimization/html/Q4.tex
+++ b/2D Projection matrix and Optimization/html/Q4.tex
@@ -15,75 +15,72 @@
     
     
 
-\section*{Q4 c}
+\section*{Q4 d}
 
-\begin{par}
-\begin{verbatim}include>forward_A.m</include\end{verbatim} \begin{verbatim}include>cgconvtik.m</include\end{verbatim}
-\end{par} \vspace{1em}
 \begin{verbatim}
-addpath("autoArrangeFigures");
 close all; clc; clear;
-X = double(imread('cameraman.tif'));
+X = mat2gray(double(imread('cameraman.tif')));
 H = gauss2d(15,15,0,0,2,2);
-D1 = [-1 0 1]';
+D1 = [-1 0 1];
 D2 = D1';
-
+H_flipped = flip(flip(H,1),2);
 Y = conv2(X,H,'same');
 sigma_s = var(Y(:));
 sigma_n = sigma_s * 1e-3;
 noise = sigma_n * randn(size(Y));
 Y = Y + noise;
-n_iter = 500;
-x_0 = X;
-for lambda = power(10,linspace(-2,log10(20),20))
-    estimate = cgconvtik(H, D1, D2, Y, x_0, lambda, n_iter);
-    figure
+b = conv2(Y,H_flipped,'same');
+n_iter = 250;
+x_0 = randn(size(X));
+i = 1;
+f1 = figure('units','normalized','outerposition',[0.0823    0.1111    0.7063    0.7963]);
+exponents = linspace(-5,-1,25);
+for lambda = power(10,exponents)
+    estimate = cgconvtik(H, D1, D2, b, x_0, lambda, n_iter);
     X_back = reshape(estimate,size(X));
-    imagesc(normalize(X_back,'range')), colormap gray
-    title({['\lambda = ',num2str(lambda)], ['N_{iter} = ',num2str(n_iter)]})
+    subplot(5,5,i)
+    imagesc(X_back), colormap gray
+    title({['\lambda = ',num2str(lambda)],['Exponent of 10: ',num2str(exponents(i))]})
+    i = i+1;
 end
-autoArrangeFigures(4,5,1)
+sgtitle(['CG Reconstructions for N_{iter} = ',num2str(n_iter)])
 \end{verbatim}
 
 \includegraphics [width=4in]{Q4_01.eps}
+\begin{verbatim}
+X = phantom('Modified Shepp-Logan',256);
+D1 = [-1 0 1];
+D2 = D1';
+
+theta_step = 180/(size(X,1));
+thetas = 0:179;
+Y = radon(X);
+sigma_s = var(Y(:));
+sigma_n = sigma_s * 1e-3;
+noise = sigma_n * randn(size(Y));
+Y = Y + noise;
+b = iradon(Y,thetas);
+b = b(2:end-1,2:end-1);
+
+n_iter = 250;
+x_0 = randn(size(X));
+i = 1;
+f2 = figure('units','normalized','outerposition',[0.1964 0.2250 0.4896 0.6019]);
+exponents = linspace(-1,2,20);
+for lambda = power(10,exponents)
+    tic
+    estimate = cgradontik(D1, D2, b, x_0, lambda, n_iter);
+    X_back = reshape(estimate,size(X));
+    subplot(4,5,i)
+    imagesc(X_back), colormap gray
+    title({['\lambda = ',num2str(lambda)],['Exponent of 10: ',num2str(exponents(i))]})
+    i = i+1;
+    toc
+end
+sgtitle(['CG Reconstructions for N_{iter} = ',num2str(n_iter)])
+\end{verbatim}
 
 \includegraphics [width=4in]{Q4_02.eps}
-
-\includegraphics [width=4in]{Q4_03.eps}
-
-\includegraphics [width=4in]{Q4_04.eps}
-
-\includegraphics [width=4in]{Q4_05.eps}
-
-\includegraphics [width=4in]{Q4_06.eps}
-
-\includegraphics [width=4in]{Q4_07.eps}
-
-\includegraphics [width=4in]{Q4_08.eps}
-
-\includegraphics [width=4in]{Q4_09.eps}
-
-\includegraphics [width=4in]{Q4_10.eps}
-
-\includegraphics [width=4in]{Q4_11.eps}
-
-\includegraphics [width=4in]{Q4_12.eps}
-
-\includegraphics [width=4in]{Q4_13.eps}
-
-\includegraphics [width=4in]{Q4_14.eps}
-
-\includegraphics [width=4in]{Q4_15.eps}
-
-\includegraphics [width=4in]{Q4_16.eps}
-
-\includegraphics [width=4in]{Q4_17.eps}
-
-\includegraphics [width=4in]{Q4_18.eps}
-
-\includegraphics [width=4in]{Q4_19.eps}
-
-\includegraphics [width=4in]{Q4_20.eps}
 
 
 
